# ros

./: README.md
Code foundation/: Unit1.ipynb  Unit2_Data_type_variables.ipynb  Unit3_Conditional_Loops.ipynb  Unit4_Functions.ipynb  Unit5_Classes_and_oop.ipynb
Code foundation/Codes/: drone_text.ipynb
Kinematics_of_Mobile_Robots/basic/: CMakeLists.txt  package.xml
Kinematics_of_Mobile_Robots/basic/src/: intro.py
Kinematics_of_Mobile_Robots/unit_2_rigid_body_motions/: CMakeLists.txt  Rigid_Body_Motions.ipynb  package.xml
Kinematics_of_Mobile_Robots/unit_2_rigid_body_motions/launch/: rpy.launch
Kinematics_of_Mobile_Robots/unit_2_rigid_body_motions/src/: ex1.py  ex2_6.py  ex2_61.py  ex2_62.py  ex2_63_rpy_rotation.py  ex2_7_homo_transf_matrix.py  ex2_rotation.py  place_cokes.py  place_table.py  quaterian_y_axis.py  quaterian_yz_axis.py  quaterian_z_axis.py  quaterian_zy_axis.py  rotate_x_axis.py
ros_basic_c++/: README.md
ros_basic_c++/1_basic/: 1_basic.ipynb  CMakeLists.txt
ros_basic_c++/1_basic/launch/: my_package_launch_file.launch
ros_basic_c++/1_basic/src/: simple.cpp
ros_basic_c++/classes/: CMakeLists.txt  Using_C++__Classes_in_ROS.ipynb  package.xml
ros_basic_c++/classes/launch/: bb8_move_circle_class.launch
ros_basic_c++/classes/src/: bb8_move_stop_circle_class.cpp  jedi_class.cpp
ros_basic_c++/service_client_pkg/: CMakeLists.txt  Services_clients.ipynb  package.xml
ros_basic_c++/service_client_pkg/launch/: traj_by_name.launch
ros_basic_c++/service_client_pkg/src/: simple_service_client.cpp
ros_basic_c++/services_32/: CMakeLists.txt  Service_client_exer2.ipynb  package.xml
ros_basic_c++/services_32/launch/: my_robot_arm_demo.launch  robot_traj_exec.launch
ros_basic_c++/services_32/src/: file_execute_trajectory.cpp
ros_basic_c++/topic_25/: CMakeLists.txt  package.xml
ros_basic_c++/topic_25/launch/: publish_age.launch
ros_basic_c++/topic_25/src/: publish_age.cpp
ros_basic_c++/topic_publisher_pkg/: 2_topics_publisher.ipynb  CMakeLists.txt
ros_basic_c++/topic_publisher_pkg/src/: simple_topic_publisher.cpp
ros_basic_c++/topic_subscriber_pkg/: 3_topic_subscriber.ipynb  3_topic_subscriber.py  CMakeLists.txt  README.md  read.md
ros_basic_c++/topic_subscriber_pkg/launch/: subscriber_topic_launch.launch
ros_basic_c++/topic_subscriber_pkg/src/: odom_subscriber.cpp  pub_pcd.cpp
ros_basics_python/: 1_0_Deconstruction.ipynb  1_Basics.ipynb  3_Unit2_topics_publisher.ipynb  4_Unit2_topics_Subscriber.ipynb  5_Unit3_Services_Clients.ipynb  6_Unit3_Services_Server.ipynb  README.md  Topics_exercise.ipynb
ros_basics_python/my_package/launch/: robot.launch
ros_basics_python/my_package/src/: Robot_age.py  simple_topic_publisher.py
rviz/overlays/: README.md  haro_overlay_complete_demo.py  height.py  re.me
src/: laser.bag
src/my_custom_action_msg_pkg/: CMakeLists.txt  package.xml
src/my_custom_action_msg_pkg/action/: Name.action
src/my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
src/my_custom_srv_msg_pkg/srv/: MyCustomServiceMessage.srv
src/my_package/: CMakeLists.txt  package.xml
src/my_package/launch/: my_package_launch_file.launch
src/my_subscriber/: CMakeLists.txt  package.xml
src/my_subscriber/launch/: laser_data.launch
src/my_subscriber/src/: laser_read.py  odom_sub.py
src/unit_3_server_client/: CMakeLists.txt  package.xml
src/unit_3_server_client/launch/: launch_file.launch
src/unit_3_server_client/src/: exercise_4_1.py
src/unit_3_services/launch/: start_bb8_move_in_circle_service_server.launch
src/unit_4_action_client/: CMakeLists.txt  package.xml
src/unit_4_action_client/action/: Myactionmessage.action
src/unit_4_action_client/src/: ardone_action_client_no_wait.py
src/unit_4_action_server/: CMakeLists.txt  package.xml
src/unit_4_action_server/src/: move_drone_square_client.py
